# quick-rs

./: .gitmodules  Cargo.toml
quickjs-sys/: Cargo.toml  build.rs  static-function.c  static-functions.c  wrapper.h
quickjs-sys/embed/patch/: Add-JS_IsArrayBuffer.patch  atomic_new_class_id.patch  check_stack_overflow.patch  infinity_handling.patch  is-array-buffer.patch  js-tobigint64-overflow.patch  locale-aware-representation.patch  missing-formal-parameter.patch  module-export.patch  msvc_alloca_compat.patch  new_class_id-thread-safe.patch  not-check-overflow.patch  support-rust-malloc.patch  undefined-behavior.patch
quickjs-sys/src/: lib.rs
src/: context.rs  error.rs  function.rs  lib.rs  module.rs  promise.rs  runtime.rs  util.rs  value.rs
src/extensions/: mod.rs  print.rs
src/extensions/canvas/: invoke.rs  mod.rs
src/extensions/canvas/impl/: barcode.rs  mod.rs  qrcode.rs  text.rs
