[package]
name = "quick-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["quickjs-sys"]

[[bin]]
name = "test"
path = "src/lib.rs"

[features]
default = []
mimalloc = ["quickjs-sys/mimalloc"]

[dependencies]
quickjs-sys = { path = "quickjs-sys" }
thiserror = { version = "1", default-features = false }
anyhow = { version = "1", default-features = false }
log = { version = "0.4", default-features = false }
