[package]
name = "quick-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["quickjs-sys"]

[features]
default = ["compio", "flume", "futures-util"]
mimalloc = ["quickjs-sys/mimalloc"]

[[bin]]
name = "test"
path = "src/lib.rs"

[dependencies]
quickjs-sys = { path = "quickjs-sys" }
thiserror = { version = "1", default-features = false }
anyhow = { version = "1", default-features = false }
log = { version = "0.4", default-features = false }
parking_lot = { version = "0.12", default-features = false }
compio = { version = "0.10", features = [
    "runtime",
    "io-uring",
    "time",
], default-features = false, optional = true }
flume = { version = "0.11", features = [
    "async",
], default-features = false, optional = true }
futures-util = { version = "0.3", features = [
    "async-await-macro",
], default-features = false, optional = true }
