[package]
name = "quick-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["quickjs-sys"]

[[bin]]
name = "test"
path = "src/lib.rs"

[features]
default = []
mimalloc = ["quickjs-sys/mimalloc"]
jemalloc = ["quickjs-sys/jemalloc"]
snmalloc = ["quickjs-sys/snmalloc"]

[dependencies]
quickjs-sys = { path = "quickjs-sys" }
thiserror = { version = "1", default-features = false }
anyhow = { version = "1", features = ["std"], default-features = false }
log = { version = "0.4", default-features = false }
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1", features = ["std"], default-features = false }
