[package]
name = "quickjs-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
libmimalloc-sys = { version = "0.1", default-features = false }

[build-dependencies]
bindgen = { version = "0.69", default-features = false }
cc = { version = "1", default-features = false }
copy_dir = { version = "0.1", default-features = false }
